@@ -1,6 +1,11 @@
 Release history for Dist-Zilla-App-Command-dumpphases
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 1.000005, see misc/*.deps* for details
+ - develop: +3 ↑3 -1 (recommends: ↓1, suggests: ↑2)
+ - runtime: (recommends: +2)
+ - test: (recommends: ↓1)
 
 1.000005 2014-10-31T00:00:38Z 45e3144
  [Dependencies::Stats]
